[gd_scene load_steps=9 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/ColorPicker/CustomColorPicker.gd" type="Script" id=2]
[ext_resource path="res://ui/ColorPicker/ColorSpectrum.gd" type="Script" id=3]
[ext_resource path="res://ui/ValueRect.gd" type="Script" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float value = 1.0;

const float TAU = 6.283185307179586476925286766559;

vec3 hsv2rgb( in vec3 c ){
    vec3 rgb = clamp(abs(mod(c.x*6.0+vec3(0.0,4.0,2.0),
                             6.0)-3.0)-1.0,
                     0.0,
                     1.0 );
    rgb = rgb*rgb*(3.0-2.0*rgb);
    return c.z * mix( vec3(1.0), rgb, c.y);
}

vec3 rgb2hsv( in vec3 c ){
    vec4 K = vec4(0.0, -1.0 / 3.0, 2.0 / 3.0, -1.0);
    vec4 p = mix(vec4(c.bg, K.wz),
                 vec4(c.gb, K.xy),
                 step(c.b, c.g));
    vec4 q = mix(vec4(p.xyw, c.r),
                 vec4(c.r, p.yzx),
                 step(p.x, c.r));
    float d = q.x - min(q.w, q.y);
    float e = 1.0e-10;
    return vec3(abs(q.z + (q.w - q.y) / (6.0 * d + e)),
                d / (q.x + e),
                q.x);
}

void fragment() {
	vec2 toCenter = vec2(0.5) - UV;
    float angle = atan(toCenter.y,toCenter.x);
    float radius = length(toCenter)*2.0;
	COLOR.rgb = hsv2rgb(vec3((angle/TAU)+0.5,radius,value));
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/value = 1.0

[sub_resource type="Gradient" id=4]

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 4 )

[node name="CustomColorPicker" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -119.0
margin_right = 96.0
margin_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 190.0
margin_bottom = 224.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="ColorSpectrum" type="ColorRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
material = SubResource( 2 )
margin_right = 188.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.68
script = ExtResource( 3 )

[node name="ValueRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 190.0
margin_right = 188.0
margin_bottom = 198.0
rect_min_size = Vector2( 0, 8 )
texture = SubResource( 3 )
expand = true
script = ExtResource( 4 )

[node name="ValuePickerRect" type="ColorRect" parent="MarginContainer/VBoxContainer/ValueRect"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.372549 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -2.0
margin_top = -4.0
margin_bottom = 4.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 188.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HexEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 137.0
margin_bottom = 22.0
size_flags_horizontal = 3
max_length = 7
placeholder_text = "hex code here"

[node name="ColorDisplay" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 138.0
margin_right = 188.0
margin_bottom = 22.0
rect_min_size = Vector2( 50, 0 )

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 162.0
margin_right = 188.0
margin_bottom = 22.0
text = "done"

[node name="PickerRect" type="ColorRect" parent="."]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.247059 )
margin_left = 65.0
margin_top = 65.0
margin_right = 73.0
margin_bottom = 73.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ColorSpectrum" to="MarginContainer/VBoxContainer/ColorSpectrum" method="_on_ColorSpectrum_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/ColorSpectrum" to="MarginContainer/VBoxContainer/ColorSpectrum" method="_on_ColorSpectrum_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ValueRect" to="MarginContainer/VBoxContainer/ValueRect" method="_on_ValueRect_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/ValueRect" to="MarginContainer/VBoxContainer/ValueRect" method="_on_ValueRect_mouse_exited"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/HexEdit" to="." method="_on_LineEdit_text_changed"]
